alb-ingress-controler-externaldns-hellospringboot/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spring-boot-hello-svc
  labels:
    app: spring-boot-hello
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: NodePort
  selector:
    app: spring-boot-hello
  ports:
  - name: http
    protocol: TCP
    port: 8081
    targetPort: 8081
